--- a/lifts.html
+++ b/lifts.html
@@ -13,6 +13,7 @@
 <body>
 
     <h1>Lift Simulation</h1>
+    <div id="liftSystemContainer"></div>
 
     <button onclick="createLifts()">Create Lifts</button>
 
