--- a/lifts.html
+++ b/lifts.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lift Simulation</title>
-    <script src="main.js"></script>
+    <script src="lifts.js"></script>
     <link rel="stylesheet" href="main.css">
 
 </head>
@@ -14,8 +14,6 @@
 
     <h1>Lift Simulation</h1>
     <div id="liftSystemContainer"></div>
-
-    <button onclick="createLifts()">Create Lifts</button>
 
 </body>
 
